--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -9,6 +9,9 @@
         <li{% if page.current == 'Hello' %} class="active"{% endif %}>
         <a href="/docs/hello_world.html">Hello World</a>
         </li>
+        <li{% if page.current == 'Template' %} class="active"{% endif %}>
+        <a href="/docs/template.html">Template</a>
+        </li>
       </ul>
     </div>
   </div>
