add a simple getting started page (details on running etl next)

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -6,8 +6,8 @@
         <li{% if page.current == 'Installation' %} class="active"{% endif %}>
         <a href="/docs/installation.html">Installation</a>
         </li>
-        <li{% if page.current == 'Hello' %} class="active"{% endif %}>
-        <a href="/docs/hello_world.html">Hello World</a>
+        <li{% if page.current == 'Getting Started' %} class="active"{% endif %}>
+        <a href="/docs/getting_started.html">Getting Started</a>
         </li>
         <li{% if page.current == 'Template' %} class="active"{% endif %}>
         <a href="/docs/template.html">Template</a>
