--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -9,8 +9,15 @@
         <li{% if page.current == 'Getting Started' %} class="active"{% endif %}>
         <a href="/docs/getting_started.html">Getting Started</a>
         </li>
-        <li{% if page.current == 'Template' %} class="active"{% endif %}>
-        <a href="/docs/template.html">Template</a>
+        <li{% if page.current == 'Styles' %} class="active"{% endif %}>
+        <a href="/docs/styles.html">Styles</a>
+        </li>
+      </ul>
+    </div>
+    <div class="well" style="padding: 8px 0px;">
+      <ul class="nav nav-list">
+        <li{% if page.current == 'Examples' %} class="active"{% endif %}>
+        <a href="/docs/examples/index.html">Examples</a>
         </li>
       </ul>
     </div>
